styles and screen layouts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">News Ctrl + F</string>
     <string name="search_cta">Search</string>
     <string name="search_example">Search for…</string>
+
+    <string name="results">Results for @string/some_string</string>
 </resources>
